fix search and blog spacing

--- a/source/sass/partials/_page.scss
+++ b/source/sass/partials/_page.scss
@@ -910,6 +910,9 @@ section.main.blogentry{
   .blog .short-desc{
 
   }
+  .blogentry p{
+    margin-bottom: 1.2em;
+  }
   .resources .publisher{
     font-size: $font-size-small;
   }
